code/tui/src/app/welcome/snapshots/app__welcome__pet__tests__welcome_pet_animation_frames.snap
---
source: code/tui/src/app/welcome/pet_tests.rs
expression: frames
---
idle
symbols
..▄..▄..
▗█▛██▜█▖
▝▜████▛▘
..▝..▘..
foreground
..B..B..
BBBBBBBB
BBBBBBBB
..B..B..
background
........
.KKKKKK.
........
........

press
symbols
.▗▄..▄▖.
▗█▛██▜█▖
.▝████▘.
........
foreground
.BB..BB.
BBBBBBBB
.BBBBBB.
........
background
........
.KKKKKK.
........
........

rise
symbols
.▐▄..▄▌.
▗█▛██▜█▖
..▝..▘..
........
foreground
.BB..BB.
BBBBBBBB
..B..B..
........
background
........
.KKKKKK.
........
........

land
symbols
.▗▄..▄▖.
▗█▛██▜█▖
.▝████▘.
..▝..▘..
foreground
.BB..BB.
BBBBBBBB
.BBBBBB.
..B..B..
background
........
.KKKKKK.
........
........
