code/tui/src/app/welcome/snapshots/app__welcome__pet__tests__welcome_pet_terminal_cells.snap
---
source: code/tui/src/app/welcome/pet_tests.rs
expression: "pet_cell_map(super::pet::sprite())"
---
symbols
..▄..▄..
▗█▛██▜█▖
▝▜████▛▘
..▝..▘..
foreground
..B..B..
BBBBBBBB
BBBBBBBB
..B..B..
background
........
.KKKKKK.
........
........
